@@ -1,10 +1,10 @@
 aufs2 standalone patch for linux-2.6.
 
 diff --git a/fs/namei.c b/fs/namei.c
-index 209ddf1..b60fdb3 100644
+index ab4ba7a..7a509ad 100644
 --- a/fs/namei.c
 +++ b/fs/namei.c
-@@ -350,6 +350,7 @@ int deny_write_access(struct file * file)
+@@ -349,6 +349,7 @@ int deny_write_access(struct file * file)
  
  	return 0;
  }
@@ -12,7 +12,7 @@ index 209ddf1..b60fdb3 100644
  
  /**
   * path_get - get a reference to a path
-@@ -1206,6 +1207,7 @@ struct dentry *lookup_hash(struct nameidata *nd)
+@@ -1205,6 +1206,7 @@ struct dentry *lookup_hash(struct nameidata *nd)
  		return ERR_PTR(err);
  	return __lookup_hash(&nd->last, nd->path.dentry, nd);
  }
@@ -20,7 +20,7 @@ index 209ddf1..b60fdb3 100644
  
  int __lookup_one_len(const char *name, struct qstr *this,
  		struct dentry *base, int len)
-@@ -1228,6 +1230,7 @@ int __lookup_one_len(const char *name, struct qstr *this,
+@@ -1227,6 +1229,7 @@ int __lookup_one_len(const char *name, struct qstr *this,
  	this->hash = end_name_hash(hash);
  	return 0;
  }
@@ -41,7 +41,7 @@ index 7d70d63..310aa98 100644
  static int event;
  static DEFINE_IDA(mnt_id_ida);
 diff --git a/fs/open.c b/fs/open.c
-index ca69241..b275be6 100644
+index 040cef7..453b782 100644
 --- a/fs/open.c
 +++ b/fs/open.c
 @@ -226,6 +226,7 @@ int do_truncate(struct dentry *dentry, loff_t length, unsigned int time_attrs,
